--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   mongo:
     image: mongo:latest
@@ -21,7 +20,7 @@ services:
     ports:
       - "3001:80"
     env_file:
-      - /backend/.env
+      - ./backend/.env
     depends_on:
       mongo:
         condition: service_healthy
